--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "node-geocoder": "^4.0.0",
     "nodemailer": "^6.7.5",
     "slugify": "^1.6.5",
+    "twilio": "^3.77.2",
     "xss-clean": "^0.1.1"
   },
   "devDependencies": {
