--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "mongoose": "^6.3.5",
     "mongoose-slug-generator": "^1.0.4",
     "morgan": "^1.10.0",
+    "node-fetch": "^3.2.6",
+    "node-fetch-commonjs": "^3.1.1",
     "node-geocoder": "^4.0.0",
     "nodemailer": "^6.7.5",
     "slugify": "^1.6.5",
